# ChangeLog for sys-apps/supersed
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/supersed/Attic/ChangeLog,v 1.5 2002/12/13 11:00:33 blizzy Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*supersed-3.58-r2 (28 Aug 2002)

  28 Aug 2002; Seemant Kulleen <seemant@gentoo.org> supersed-3.58-r2.ebuild
  files/digest-supersed-3.58-r2 :

  Installs documentation.  Thanks to: thompson@pobox.com (Paul Thompson) in
  bug #6941 for pointing it out.

*supersed-3.58-r1 (23 Aug 2002)

  23 Aug 2002; Seemant Kulleen <seemant@gentoo.org> supersed-3.58-r1.ebuild
  files/digest-supersed-3.58-r1 :

  The binary this installs is now /bin/ssed instead of replacing the
  system's GNU/sed.  This closes bugs #6726, #6608, #6775, #6855.

*supersed-3.58 (24 Jul 2002)


  24 Jul 2002; Seemant Kulleen <seemant@gentoo.org> supersed-3.58.ebuild
  ChangeLog files/digest-supersed-3.58 :

  A highly enhanced version of GNU sed-3.02.80 which performs much faster
  and allows perl regular expressions among other things.  Installs as a
  replacement for GNU sed.